--- a/index.html
+++ b/index.html
@@ -152,6 +152,24 @@
 				</form>
 			</div>
 		</div>
+		<!-- The Modal -->
+		<div id="myModal2" class="modal">
+		<!-- END OF Modal -->
+		<!-- Modal content -->
+		<div class="modal-content">
+			<div id="modal-form2">
+				<span class="close">&times;</span>
+				<h2 class="section-head">Book Your Trip</h2>
+				<form action="" method="post">
+					<input type="text" name="name" placeholder="Name">
+					<input type="email" name="email"  placeholder="Email">
+					<input type="text" name="trip-date" placeholder="Trip Date" >
+					<input type="text" name="location" placeholder="Location">
+					<textarea name="message" placeholder="Message"></textarea>
+					<button class="btn" type="submit">Send Message</button>
+				</form>
+			</div>
+		</div>
 		<!-- END OF Modal Content -->
 		<script src="/src/script.js"></script>
 	</body>
