added modal to navbar

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<ul>
 						<li><a href="/" class="active">Home</a></li>
 						<li><a href="#charters">Charters</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a id="myBtn2">Contact</a></li>
 					</ul>
 				</div>
 			</nav>
@@ -152,10 +152,10 @@
 				</form>
 			</div>
 		</div>
-		<!-- The Modal -->
+		<!-- The Modal2 -->
 		<div id="myModal2" class="modal">
-		<!-- END OF Modal -->
-		<!-- Modal content -->
+		<!-- END OF Modal 2-->
+		<!-- Modal content2 -->
 		<div class="modal-content">
 			<div id="modal-form2">
 				<span class="close">&times;</span>
@@ -170,7 +170,7 @@
 				</form>
 			</div>
 		</div>
-		<!-- END OF Modal Content -->
+		<!-- END OF Modal Content2 -->
 		<script src="/src/script.js"></script>
 	</body>
 </html>
