--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet" />
 		<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="/src/css/style.css" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/src/img/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/src/img/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/src/img/favicon-16x16.png">
+		<link rel="manifest" href="/src/img/site.webmanifest">
 		<title>Northwest Charters</title>
 	</head>
 	<body>
